modify code for new data table and view table flow

--- a/process/parepare_CRM_data.ipynb
+++ b/process/parepare_CRM_data.ipynb
@@ -29,8 +29,9 @@
     "config['MDM_mapping'] = 'MDM_mapping.xlsx'\n",
     "\n",
     "# output files\n",
-    "config['CRM cost output'] = 'CRM cost 202001-04.xlsx'\n",
-    "config['CRM performance output'] = 'CRM performance 202001-04.xlsx'"
+    "config['spending_CRM'] = 'spending CRM 202001-04.xlsx'\n",
+    "config['performance_CRM'] = 'performance CRM 202001-04.xlsx'\n",
+    "config['performance_search_index'] = 'performance search index 202001-04.xlsx'"
    ]
   },
   {
@@ -50,8 +51,7 @@
     "                        + config['data_folder_path'] + '/' \\\n",
     "                        + config['BHT input'] \n",
     "\n",
-    "spending_input_df = pd.read_excel(input_file_path, sheet_name='spending', dtype=str)\n",
-    "spending_input_df['Value'] = spending_input_df['Spending_value'].astype('float')"
+    "spending_input_df = pd.read_excel(input_file_path, sheet_name='spending', dtype=str)"
    ]
   },
   {
@@ -74,31 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_brand_name(brand):\n",
-    "    if brand == 'NC':\n",
-    "        return 'Nutrilon'\n",
-    "    elif brand=='AN':\n",
-    "        return 'Aptamil'\n",
-    "    return brand\n",
-    "\n",
-    "spending_input_df['Brand'] = spending_input_df['Brand'].apply(\n",
-    "        lambda x: get_brand_name(x))\n",
-    "\n",
-    "perform_input_df['Brand'] = perform_input_df['Brand'].apply(\n",
-    "        lambda x: get_brand_name(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "input_file_path = config['project_path'] + '/' \\\n",
     "                        + config['data_folder_path'] + '/' \\\n",
     "                        + config['MDM_mapping']\n",
     "\n",
-    "mdm_input_df = pd.read_excel(input_file_path, dtype=str)"
+    "mdm_input_df = pd.read_excel(input_file_path, dtype=str)\n",
+    "mdm_input_df = mdm_input_df[['Province_code', 'MDM_province_code']].drop_duplicates()"
    ]
   },
   {
@@ -159,10 +140,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Process CRM Investment"
+    "spending_df"
    ]
   },
   {
@@ -171,89 +154,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_aip_cost_type(aip):\n",
-    "    if aip == 'A':\n",
-    "        return 'Total A Cost'\n",
-    "    elif aip == 'I':\n",
-    "        return 'Total I Cost'\n",
-    "    elif aip == 'P':\n",
-    "        return 'Total P Cost'\n",
-    "    return 'Total AD/Non-working Cost'\n",
-    "\n",
-    "def get_aip_crm_type(aip):\n",
-    "    if aip == 'A':\n",
-    "        return 'Total A CRM'\n",
-    "    elif aip == 'I':\n",
-    "        return'Total I CRM'\n",
-    "    elif aip == 'P':\n",
-    "        return'Total P CRM'\n",
-    "    return 'Total AD/Non-working Media'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spending_df['Level 1'] = \"Total A&P\"\n",
-    "spending_df['Level 2'] = \"Total CRM\"\n",
-    "spending_df['Level 3'] = spending_df['AIP'].apply(lambda x : get_aip_cost_type(x))\n",
-    "spending_df['Level 4'] = spending_df['AIP'].apply(lambda x : get_aip_crm_type(x))\n",
-    "spending_df['Level 5'] = spending_df['Cost_type_2']\n",
-    "spending_df['Province'] = spending_df['MDM_province_code']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spending_df = spending_df[['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']]"
+    "output_df = spending_df[['Date', 'MDM_province_code', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_value']]\n",
+    "output_df.columns = ['Date', 'Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_value']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create all year, province, KPI combination for 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_dates_map = pd.DataFrame(columns=['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5'])\n",
-    "all_types= spending_df[['Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['Date'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, spending_df, on=['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5'], how='left')\n",
-    "output_df = output_df.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime('%Y/%m/%d', time.strptime(year_month,'%Y%m'))\n",
-    "\n",
-    "output_df['Date'] = output_df['Date'].apply(lambda x : format_yearmonth(x))"
+    "## Output CRM Investment"
    ]
   },
   {
@@ -264,7 +173,7 @@
    "source": [
     "output_file_path = config['project_path'] + '/' \\\n",
     "                        + config['temp_folder_path'] + '/' \\\n",
-    "                        + config['CRM cost output']\n",
+    "                        + config['spending_CRM']\n",
     "\n",
     "output_df.to_excel(output_file_path, index=False)"
    ]
@@ -273,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process CRM Performance"
+    "## Output CRM Performance"
    ]
   },
   {
@@ -282,14 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "perform_df = perform_df[['Date', 'Brand', 'MDM_province_code', 'KPI', 'KPI_value']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create all year, province, KPI combination for 2020"
+    "perform_df = perform_df[['Date','MDM_province_code', 'Brand', 'KPI', 'KPI_value']]\n",
+    "perform_df.columns = ['Date','Province', 'Brand', 'KPI', 'KPI_value']"
    ]
   },
   {
@@ -298,71 +201,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dates_map = pd.DataFrame(columns=['Date', 'Brand', 'MDM_province_code', 'KPI'])\n",
-    "all_types= perform_df[['Brand', 'MDM_province_code', 'KPI']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['Date'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, perform_df, on=['Date', 'Brand', 'MDM_province_code', 'KPI'], how='left')\n",
-    "output_df = output_df.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df['Level 1'] = output_df['KPI']\n",
-    "output_df['Level 2'] = output_df['KPI']\n",
-    "output_df['Level 3'] = output_df['KPI']\n",
-    "output_df['Level 4'] = output_df['KPI']\n",
-    "output_df['Level 5'] = output_df['KPI']\n",
-    "output_df['Province'] = output_df['MDM_province_code']\n",
-    "output_df['Value'] = output_df['KPI_value']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime('%Y/%m/%d', time.strptime(year_month,'%Y%m'))\n",
+    "perf_crm_df = perform_df[(perform_df['KPI'] == 'CRM Leads Offline') \n",
+    "                       | (perform_df['KPI'] == 'CRM Leads Online')\n",
+    "                       | (perform_df['KPI'] == 'CRM NU Offline')\n",
+    "                       | (perform_df['KPI'] == 'CRM NU Online')\n",
+    "                       | (perform_df['KPI'] == 'Active Leads')\n",
+    "                       | (perform_df['KPI'] == 'Landing UV')].copy()\n",
     "\n",
-    "output_df['Date'] = output_df['Date'].apply(lambda x : format_yearmonth(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = output_df[['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "output_file_path = config['project_path'] + '/' \\\n",
     "                        + config['temp_folder_path'] + '/' \\\n",
-    "                        + config['CRM performance output']\n",
+    "                        + config['performance_CRM']\n",
     "\n",
-    "output_df.to_excel(output_file_path, index=False)"
+    "perf_crm_df.to_excel(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perf_si_df = perform_df[(perform_df['KPI'] == 'Ali Search')\n",
+    "                       | (perform_df['KPI'] == 'Baidu Search')].copy()\n",
+    "\n",
+    "output_file_path = config['project_path'] + '/' \\\n",
+    "                        + config['temp_folder_path'] + '/' \\\n",
+    "                        + config['performance_search_index']\n",
+    "\n",
+    "perf_si_df.to_excel(output_file_path, index=False)"
    ]
   }
  ],
