--- a/process/prepare_channel_data.ipynb
+++ b/process/prepare_channel_data.ipynb
@@ -28,7 +28,7 @@
     "config['channel_input'] = 'Channel AnP 202001-05.xlsx'\n",
     "\n",
     "# output files\n",
-    "config['channel_output'] = 'Channel AnP split 202001-04.xlsx'"
+    "config['spending_channel'] = 'Spending Channel AnP 202001-04.xlsx'"
    ]
   },
   {
@@ -58,38 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_Type_2'])['Value'].sum().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create all year, province, KPI combination for 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_dates_map = pd.DataFrame(columns=['Date','Brand', 'Province', 'Cost_Type_2'])\n",
-    "all_types= channel_df[['Brand', 'Province', 'Cost_Type_2']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['Date'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, channel_df, on=['Date', 'Brand', 'Province', 'Cost_Type_2'], how='left')\n",
-    "output_df = output_df.fillna(0)"
+    "output_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_Type_2'])['Value'].sum().reset_index()"
    ]
   },
   {
@@ -114,21 +83,38 @@
     "        return 'GT'\n",
     "    elif cost_type == 'Sales RKMBS':\n",
     "        return 'RKMBS'\n",
-    "    return cost_type\n",
-    "\n",
-    "\n",
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime('%Y/%m/%d', time.strptime(year_month,'%Y%m'))\n",
-    "\n",
-    "output_df['Date'] = output_df['Date'].apply(lambda x : format_yearmonth(x))\n",
-    "\n",
-    "output_df['Level 1'] = 'Total A&P'\n",
-    "output_df['Level 2'] = 'Total Channel'\n",
-    "output_df['Level 3'] = 'Total P Cost'\n",
-    "output_df['Level 4'] = 'Total Channel'\n",
-    "output_df['Level 5'] = output_df['Cost_Type_2'].apply(lambda x : get_level_5(x))\n",
-    "\n",
-    "output_df = output_df[['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']]"
+    "    return cost_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df['Cost_Type_2'] = output_df['Cost_Type_2'].apply(lambda x : get_level_5(x))\n",
+    "output_df['Cost_Type_1'] = 'Channel'\n",
+    "output_df['Cost_Type_3'] = ''\n",
+    "output_df['Cost_Type_4'] = ''\n",
+    "output_df['AIP'] = 'P'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df = output_df[['Date', 'Province', 'Cost_Type_1', 'Cost_Type_2', 'Cost_Type_3', 'Cost_Type_4', 'AIP', 'Brand', 'Value']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df.columns = ['Date', 'Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_value']"
    ]
   },
   {
@@ -139,7 +125,7 @@
    "source": [
     "output_file_path = config['project_path'] + '/' \\\n",
     "                        + config['temp_folder_path'] + '/' \\\n",
-    "                        + config['channel_output'] \n",
+    "                        + config['spending_channel'] \n",
     "\n",
     "output_df.to_excel(output_file_path, index=False)"
    ]
