--- a/process/prepare_offtake.ipynb
+++ b/process/prepare_offtake.ipynb
@@ -30,7 +30,7 @@
     "config['MDM_mapping'] = 'MDM_mapping.xlsx'\n",
     "\n",
     "# output files\n",
-    "config['offtake_output'] = 'Offtake IFFO rate 202001-05.xlsx'\n",
+    "config['performance_offtake'] = 'Performance Danone offtake 202001-05.xlsx'\n",
     "config['nation_province_by_brand_file'] = '202001-05_nation_province_by_brand.xlsx'\n",
     "config['nation_to_province_brand_file'] = '202001-05_nation_to_province_brand.xlsx'\n",
     "config['brand_to_province_brand_file'] = '202001-05_brand_to_province_brand.xlsx'\n",
@@ -107,7 +107,8 @@
     "                        + config['data_folder_path'] + '/' \\\n",
     "                        + config['MDM_mapping']\n",
     "\n",
-    "province_df = pd.read_excel(input_file_path, dtype=str)"
+    "province_df = pd.read_excel(input_file_path, dtype=str)\n",
+    "province_df = province_df[['MDM_province_name', 'MDM_province_code']].drop_duplicates()"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keep Offline Only"
+    "## Seperate Online Offline Only"
    ]
   },
   {
@@ -169,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offtake_df = offtake_df[offtake_df['Channel_Code'] != 'EC']"
+    "offtake_ec_df = offtake_df[offtake_df['Channel_Code'] == 'EC']\n",
+    "offline_df = offtake_df[offtake_df['Channel_Code'] != 'EC']"
    ]
   },
   {
@@ -178,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_offtake = offtake_df.groupby(by = ['YearMonth', 'MDM_province_code', 'Brand', 'SKU'])['Offtake_SP_Value'].sum().reset_index()"
+    "monthly_offline = offline_df.groupby(by = ['YearMonth', 'MDM_province_code', 'Brand'])['Offtake_SP_Value'].sum().reset_index()"
    ]
   },
   {
@@ -194,12 +196,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonhq_offtake = monthly_offtake[monthly_offtake['MDM_province_code'] != 'HQ']\n",
-    "non_hq_all = nonhq_offtake.groupby(by = ['YearMonth', 'Brand', 'SKU'])['Offtake_SP_Value'].sum().reset_index()\n",
-    "non_hq_all.columns = ['YearMonth', 'Brand', 'SKU', 'all_offtake']\n",
-    "nonhq_offtake_split = pd.merge(nonhq_offtake, non_hq_all, on=['YearMonth', 'Brand', 'SKU'], how='left')\n",
-    "nonhq_offtake_split['split_ratio'] = nonhq_offtake_split['Offtake_SP_Value'] / nonhq_offtake_split['all_offtake']\n",
-    "nonhq_offtake_split = nonhq_offtake_split.drop(['Offtake_SP_Value', 'all_offtake'],axis=1)"
+    "nonhq_offline = monthly_offline[monthly_offline['MDM_province_code'] != 'HQ']\n",
+    "non_hq_all = nonhq_offline.groupby(by = ['YearMonth', 'Brand'])['Offtake_SP_Value'].sum().reset_index()\n",
+    "non_hq_all.columns = ['YearMonth', 'Brand', 'all_offtake']\n",
+    "nonhq_offline_split = pd.merge(nonhq_offline, non_hq_all, on=['YearMonth', 'Brand'], how='left')\n",
+    "nonhq_offline_split['split_ratio'] = nonhq_offline_split['Offtake_SP_Value'] / nonhq_offline_split['all_offtake']\n",
+    "nonhq_offline_split = nonhq_offline_split.drop(['Offtake_SP_Value', 'all_offtake'],axis=1)"
    ]
   },
   {
@@ -208,12 +210,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hq_offtake = monthly_offtake[monthly_offtake['MDM_province_code'] == 'HQ']\n",
-    "hq_offtake = hq_offtake.drop('MDM_province_code',axis=1)\n",
+    "hq_offline = monthly_offline[monthly_offline['MDM_province_code'] == 'HQ']\n",
+    "hq_offline = hq_offline.drop('MDM_province_code',axis=1)\n",
     "\n",
-    "hq_offtake = pd.merge(hq_offtake, nonhq_offtake_split, on=['YearMonth', 'Brand', 'SKU'], how='left')\n",
-    "hq_offtake ['hq_split_value'] = hq_offtake['Offtake_SP_Value'] * hq_offtake['split_ratio']\n",
-    "hq_offtake = hq_offtake.drop(['Offtake_SP_Value', 'split_ratio'],axis=1)"
+    "hq_offline = pd.merge(hq_offline, nonhq_offline_split, on=['YearMonth', 'Brand'], how='left')\n",
+    "hq_offline ['hq_split_value'] = hq_offline['Offtake_SP_Value'] * hq_offline['split_ratio']\n",
+    "hq_offline = hq_offline.drop(['Offtake_SP_Value', 'split_ratio'],axis=1)"
    ]
   },
   {
@@ -222,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake = pd.merge(nonhq_offtake, hq_offtake, on=['YearMonth', 'MDM_province_code','Brand', 'SKU'], how='left')"
+    "all_offtake = pd.merge(nonhq_offline, hq_offline, on=['YearMonth', 'MDM_province_code','Brand'], how='left')"
    ]
   },
   {
@@ -231,14 +233,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake['Offtake_Value'] = all_offtake['Offtake_SP_Value'] + all_offtake['hq_split_value']"
+    "all_offtake['Offtake_Value'] = all_offtake['Offtake_SP_Value'] + all_offtake['hq_split_value']\n",
+    "all_offtake = all_offtake[['YearMonth', 'MDM_province_code', 'Brand', 'Offtake_Value']]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add National Offtake"
+    "## Add National Offline Offtake"
    ]
   },
   {
@@ -247,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati = all_offtake.groupby(by = ['YearMonth', 'Brand', 'SKU'])['Offtake_Value'].sum().reset_index()"
+    "offline_offtake_nati = all_offtake.groupby(by = ['YearMonth', 'Brand'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -256,8 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati['MDM_province_code'] = 'National'\n",
-    "all_offtake_nati = all_offtake_nati[['YearMonth', 'MDM_province_code', 'Brand', 'SKU', 'Offtake_Value']]"
+    "offline_offtake_nati['MDM_province_code'] = 'National'\n",
+    "offline_offtake_nati = offline_offtake_nati[['YearMonth', 'MDM_province_code', 'Brand', 'Offtake_Value']]"
    ]
   },
   {
@@ -266,14 +269,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_full = all_offtake.append(all_offtake_nati, ignore_index=True)"
+    "all_offline_offtake = all_offtake.append(offline_offtake_nati, ignore_index=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use Aptamil for AP and AC"
+    "## Add EC offtake back"
    ]
   },
   {
@@ -282,15 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_brand_name(brand):\n",
-    "    if brand == 'NC':\n",
-    "        return 'Nutrilon'\n",
-    "    elif (brand=='AC') | (brand == 'AP'):\n",
-    "        return 'Aptamil'\n",
-    "    return ''\n",
-    "\n",
-    "all_offtake_full['Brand_Name'] = all_offtake_full['Brand'].apply(\n",
-    "        lambda x: get_brand_name(x))"
+    "ec_tmp_df = offtake_ec_df.groupby(by = ['YearMonth', 'Brand'])['Offtake_SP_Value'].sum().reset_index()"
    ]
   },
   {
@@ -299,15 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_iffo_gum(sku):\n",
-    "    if sku.endswith('1') | sku.endswith('2'):\n",
-    "        return 'IFFO'\n",
-    "    elif sku.endswith('3') | sku.endswith('4'):\n",
-    "        return 'GUM'\n",
-    "    return ''\n",
-    "\n",
-    "all_offtake_full['iffo_gum'] = all_offtake_full['SKU'].apply(\n",
-    "        lambda x: get_iffo_gum(x))"
+    "ec_tmp_df.columns = ['YearMonth', 'Brand', 'Offtake_Value']\n",
+    "ec_tmp_df['MDM_province_code'] = 'National'"
    ]
   },
   {
@@ -316,13 +304,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_brand = all_offtake_full.groupby(by = ['YearMonth', 'MDM_province_code', 'Brand_Name'])['Offtake_Value'].sum().reset_index()\n",
-    "\n",
-    "all_offtake_iffo =  all_offtake_full[all_offtake_full['iffo_gum'] == 'GUM']\n",
-    "\n",
-    "all_offtake_iffo = all_offtake_iffo.groupby(by = ['YearMonth', 'MDM_province_code', 'Brand_Name'])['Offtake_Value'].sum().reset_index()\n",
-    "\n",
-    "all_offtake_iffo.columns = ['YearMonth', 'MDM_province_code', 'Brand_Name', 'iffo_offtake_value']"
+    "all_offtake_nati = ec_tmp_df.append(offline_offtake_nati, ignore_index=True)\n",
+    "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth', 'MDM_province_code', 'Brand'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -331,16 +314,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_res = pd.merge(all_offtake_brand, all_offtake_iffo, on=['YearMonth', 'MDM_province_code', 'Brand_Name'], how = 'left')\n",
-    "\n",
-    "all_offtake_res['iffo_ratio'] = all_offtake_res['iffo_offtake_value'] / all_offtake_res['Offtake_Value']"
+    "output_df = all_offtake.append(all_offtake_nati, ignore_index=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare for output"
+    "# Save output"
    ]
   },
   {
@@ -349,101 +330,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "danone_offtake = all_offtake_res[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Offtake_Value']].copy()\n",
-    "danone_offtake['Level 1'] = 'Danone Offtake'\n",
-    "danone_offtake.columns = ['YearMonth', 'Province', 'Brand', 'Value', 'Level 1']\n",
-    "\n",
-    "iffo_ratio = all_offtake_res[['YearMonth', 'MDM_province_code', 'Brand_Name', 'iffo_ratio']].copy()\n",
-    "iffo_ratio['Level 1'] = 'IFFO Ratio'\n",
-    "iffo_ratio.columns = ['YearMonth', 'Province', 'Brand', 'Value', 'Level 1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "danone_offtake = all_offtake_res[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Offtake_Value']].copy()\n",
-    "danone_offtake['Level 1'] = 'Danone Offtake'\n",
-    "danone_offtake.columns = ['YearMonth', 'Province', 'Brand', 'Value', 'Level 1']\n",
-    "\n",
-    "iffo_ratio = all_offtake_res[['YearMonth', 'MDM_province_code', 'Brand_Name', 'iffo_ratio']].copy()\n",
-    "iffo_ratio['Level 1'] = 'IFFO Ratio'\n",
-    "iffo_ratio.columns = ['YearMonth', 'Province', 'Brand', 'Value', 'Level 1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = danone_offtake.append(iffo_ratio, ignore_index = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create all year, province, KPI combination for 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_dates_map = pd.DataFrame(columns=['YearMonth','Province', 'Brand', 'Level 1'])\n",
-    "all_types= output_df[['Province', 'Brand', 'Level 1']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['YearMonth'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, output_df, on=['YearMonth','Province', 'Brand', 'Level 1'], how='left')\n",
-    "output_df = output_df.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime('%Y/%m/%d', time.strptime(year_month,'%Y%m'))\n",
-    "\n",
-    "output_df['Date'] = output_df['YearMonth'].apply(lambda x : format_yearmonth(x))\n",
-    "\n",
-    "output_df['Level 2'] = output_df['Level 1']\n",
-    "output_df['Level 3'] = output_df['Level 1']\n",
-    "output_df['Level 4'] = output_df['Level 1']\n",
-    "output_df['Level 5'] = output_df['Level 1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = output_df[['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save offtake and IFFO Ratio"
+    "output_df['KPI'] = 'Danone Offtake'\n",
+    "output_df['Date'] = output_df['YearMonth']\n",
+    "output_df = output_df[['Date', 'MDM_province_code', 'Brand', 'KPI', 'Offtake_Value']]\n",
+    "output_df.columns = ['Date', 'Province', 'Brand', 'KPI', 'KPI_value']"
    ]
   },
   {
@@ -454,7 +344,7 @@
    "source": [
     "output_file_path = config['project_path'] + '/' \\\n",
     "                        + config['temp_folder_path'] + '/' \\\n",
-    "                        + config['offtake_output'] \n",
+    "                        + config['performance_offtake']\n",
     "\n",
     "output_df.to_excel(output_file_path, index=False)"
    ]
@@ -479,9 +369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati = all_offtake_full[all_offtake_full['MDM_province_code'] == 'National']\n",
-    "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth', 'Brand_Name'])['Offtake_Value'].sum().reset_index()\n",
-    "all_offtake_nati.columns = ['YearMonth', 'Brand_Name', 'National_Offtake_Value']"
+    "all_offtake_nati = all_offline_offtake[all_offline_offtake['MDM_province_code'] == 'National']\n",
+    "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth', 'Brand'])['Offtake_Value'].sum().reset_index()\n",
+    "all_offtake_nati.columns = ['YearMonth', 'Brand', 'National_Offtake_Value']"
    ]
   },
   {
@@ -490,8 +380,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_prov = all_offtake_full[all_offtake_full['MDM_province_code'] != 'National']\n",
-    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand_Name', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
+    "all_offtake_prov = all_offline_offtake[all_offline_offtake['MDM_province_code'] != 'National']\n",
+    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -500,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nati_to_prov = pd.merge(all_offtake_nati, all_offtake_prov, on=['YearMonth', 'Brand_Name'], how='left')\n",
+    "nati_to_prov = pd.merge(all_offtake_nati, all_offtake_prov, on=['YearMonth', 'Brand'], how='left')\n",
     "nati_to_prov['Split_Ratio'] = nati_to_prov['Offtake_Value'] /  nati_to_prov['National_Offtake_Value']"
    ]
   },
@@ -510,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Split_Ratio']]"
+    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand', 'Split_Ratio']]"
    ]
   },
   {
@@ -539,9 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati = all_offtake_full[all_offtake_full['MDM_province_code'] == 'National']\n",
-    "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth', 'Brand_Name'])['Offtake_Value'].sum().reset_index()\n",
-    "all_offtake_nati.columns = ['YearMonth', 'Brand_Name', 'Brand_Offtake_Value']"
+    "all_offtake_nati = all_offline_offtake[all_offline_offtake['MDM_province_code'] == 'National']\n",
+    "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth', 'Brand'])['Offtake_Value'].sum().reset_index()\n",
+    "all_offtake_nati.columns = ['YearMonth', 'Brand', 'Brand_Offtake_Value']"
    ]
   },
   {
@@ -550,8 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_prov = all_offtake_full[all_offtake_full['MDM_province_code'] != 'National']\n",
-    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand_Name', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
+    "all_offtake_prov = all_offline_offtake[all_offline_offtake['MDM_province_code'] != 'National']\n",
+    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -560,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nati_to_prov = pd.merge(all_offtake_nati, all_offtake_prov, on=['YearMonth', 'Brand_Name'], how='left')\n",
+    "nati_to_prov = pd.merge(all_offtake_nati, all_offtake_prov, on=['YearMonth', 'Brand'], how='left')\n",
     "nati_to_prov['Split_Ratio'] = nati_to_prov['Offtake_Value'] /  nati_to_prov['Brand_Offtake_Value']"
    ]
   },
@@ -570,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Split_Ratio']]"
+    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand', 'Split_Ratio']]"
    ]
   },
   {
@@ -599,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_nati = all_offtake_full[all_offtake_full['MDM_province_code'] == 'National']\n",
+    "all_offtake_nati = all_offline_offtake[all_offline_offtake['MDM_province_code'] == 'National']\n",
     "all_offtake_nati = all_offtake_nati.groupby(by = ['YearMonth'])['Offtake_Value'].sum().reset_index()\n",
     "all_offtake_nati.columns = ['YearMonth', 'National_Offtake_Value']"
    ]
@@ -610,8 +500,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_prov = all_offtake_full[all_offtake_full['MDM_province_code'] != 'National']\n",
-    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand_Name', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
+    "all_offtake_prov = all_offline_offtake[all_offline_offtake['MDM_province_code'] != 'National']\n",
+    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -630,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Split_Ratio']]"
+    "nati_to_prov = nati_to_prov[['YearMonth', 'MDM_province_code', 'Brand', 'Split_Ratio']]"
    ]
   },
   {
@@ -659,8 +549,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_offtake_prov = all_offtake_full[all_offtake_full['MDM_province_code'] != 'National']\n",
-    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand_Name', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
+    "all_offtake_prov = all_offline_offtake[all_offline_offtake['MDM_province_code'] != 'National']\n",
+    "all_offtake_prov = all_offtake_prov.groupby(by = ['YearMonth', 'Brand', 'MDM_province_code'])['Offtake_Value'].sum().reset_index()"
    ]
   },
   {
@@ -689,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prov_to_provbrand = prov_to_provbrand[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Split_Ratio']]"
+    "prov_to_provbrand = prov_to_provbrand[['YearMonth', 'MDM_province_code', 'Brand', 'Split_Ratio']]"
    ]
   },
   {
